<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">
            <android.support.v7.widget.CardView
                xmlns:cardview="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                android:layout_marginLeft="@dimen/asset_card_horizontal_margin"
                android:layout_marginRight="@dimen/asset_card_horizontal_margin"
                android:layout_marginTop="@dimen/asset_card_vertical_margin"
                android:layout_marginBottom="@dimen/asset_card_vertical_margin"
                cardview:cardCornerRadius="8dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/chart_padding">
                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/chart"
                        android:layout_width="match_parent"
                        android:layout_height="400dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginEnd="4dp"></com.github.mikephil.charting.charts.LineChart>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal"
                        android:layout_marginRight="4dp"
                        android:layout_marginEnd="4dp">
                        <EditText
                            android:id="@+id/chart_from_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/from_date"
                            android:ems="6"
                            android:maxEms="10"
                            android:layout_marginLeft="@dimen/date_picker_left_margin"/>

                        <EditText
                            android:id="@+id/chart_to_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/to_date"
                            android:ems="6"
                            android:maxEms="10"
                            android:layout_marginLeft="@dimen/date_picker_left_margin"/>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"

                            android:orientation="horizontal"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <android.support.v7.widget.CardView xmlns:cardview="http://schemas.android.com/apk/res-auto"
                                android:id="@+id/select_dates_btn"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:clickable="true"
                                android:foreground="?android:attr/selectableItemBackground"
                                android:gravity="center"
                                android:paddingBottom="@dimen/btn_card_select_date_vertical_padding"
                                android:paddingLeft="@dimen/btn_card_select_date_horizontal_padding"

                                android:paddingRight="@dimen/btn_card_select_date_horizontal_padding"
                                android:paddingTop="@dimen/btn_card_select_date_vertical_padding"
                                cardview:cardCornerRadius="6dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:paddingBottom="@dimen/btn_text_select_date_vertical_padding"
                                    android:paddingLeft="@dimen/btn_text_select_date_horizontal_padding"
                                    android:paddingRight="@dimen/btn_text_select_date_horizontal_padding"
                                    android:paddingTop="@dimen/btn_text_select_date_vertical_padding"
                                    android:text="@string/select_date_btn"
                                    android:textAlignment="center"
                                    android:textSize="@dimen/text_sp_dimen"
                                    android:textStyle="bold" />
                            </android.support.v7.widget.CardView>

                        </LinearLayout>



                    </LinearLayout>

                </LinearLayout>


            </android.support.v7.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/asset_card_vertical_margin"
                android:layout_marginLeft="@dimen/asset_card_horizontal_margin"
                android:layout_marginRight="@dimen/asset_card_horizontal_margin"
                android:layout_marginTop="@dimen/asset_card_vertical_margin"
                android:elevation="4dp"
                cardview:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/asset_tv_margin"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/info_asset_total_supply_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/total_supply_info" />

                        <TextView
                            android:id="@+id/value_asset_total_supply_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/total_supply_info" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/asset_tv_margin"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/info_asset_circulating_supply_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/circulating_supply_info" />

                        <TextView
                            android:id="@+id/value_asset_circulating_supply_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/circulating_supply_info" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/asset_tv_margin"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/info_asset_market_cap_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/market_cap_info" />

                        <TextView
                            android:id="@+id/value_asset_market_cap_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/market_cap_info" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/asset_tv_margin"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/info_asset_total_volume_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/total_volume_info" />

                        <TextView
                            android:id="@+id/value_asset_total_volume_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/total_volume_info" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/asset_tv_margin"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/info_asset_code_repos_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/github_repos_info" />

                        <TextView
                            android:id="@+id/value_asset_code_repos_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/github_repos_info" />

                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:cardview="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                android:layout_marginLeft="@dimen/asset_card_horizontal_margin"
                android:layout_marginRight="@dimen/asset_card_horizontal_margin"
                android:layout_marginTop="@dimen/asset_card_vertical_margin"
                android:layout_marginBottom="@dimen/asset_card_vertical_margin"
                cardview:cardCornerRadius="8dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/info_asset_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/description_info" />

                    <TextView
                        android:id="@+id/value_asset_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/description_info" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>



    </LinearLayout>
</ScrollView>