<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="@dimen/layout_height_portfolio_item"
    >


    <LinearLayout
        android:layout_width="64dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
           >

            <ImageView
                android:id="@+id/position_logo_view"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/portfolio_ticker_tv"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="10sp"
            android:textStyle="bold"/>

    </LinearLayout>
    <LinearLayout
       android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/portfolio_item_price_tv"
            android:textSize="12sp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="match_parent"
            android:textAlignment="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"></LinearLayout>
        <android.support.v7.widget.CardView
            xmlns:cardview="http://schemas.android.com/apk/res-auto"
            android:id="@+id/assets_price_change_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            cardview:cardBackgroundColor="@color/grey_dull"
            cardview:cardCornerRadius="4dp"
            android:gravity="center"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/portfolio_percentage_24h_tv"
                android:textColor="@color/black_dull"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="10sp"
                android:textAlignment="center"/>
        </android.support.v7.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"></LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:text="@string/position_quantity"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="10sp" />
            <TextView
                android:id="@+id/position_amount_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="10sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:text="@string/position_value"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="10sp" />
            <TextView
                android:id="@+id/position_value_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="10sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:text="@string/from_position_date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="10sp" />
            <TextView
                android:id="@+id/from_position_date_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:textAlignment="center"
                android:textSize="10sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >
            <TextView
                android:text="@string/to_position_date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="10sp" />
            <TextView
                android:id="@+id/to_position_date_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="10sp" />
        </LinearLayout>



    </LinearLayout>





</LinearLayout>