<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:background="#FAFAFA"
    android:elevation="4dp"
    android:layout_height="64dp">
    
    <LinearLayout
        android:layout_width="64dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/card">

            <ImageView
                android:id="@+id/logo_view"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                 />
        </LinearLayout>

        <TextView
            android:id="@+id/ticker_tv"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="10sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.4"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/price_title"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/price_tv"

                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"

                    android:gravity="center"
                    android:text="@string/percentage_24h_title"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/percentage_24h_tv"

                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="1dp">
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/last_updated"
                android:textSize="@dimen/low_importance_text_sp_dimen"
                android:layout_height="wrap_content"
                android:textAlignment="center"  />
            <TextView
                android:id="@+id/last_updated_at_tv"
                android:layout_width="match_parent"
                android:text="stub_text"
                android:textSize="@dimen/low_importance_text_sp_dimen"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center" />
        </LinearLayout>

    </LinearLayout>




    <LinearLayout
        android:id="@+id/refresh_btn_layout"
        android:orientation="vertical"
        android:layout_width="wrap_content"

        android:gravity="center"
        android:layout_height="match_parent"
        >
        <ImageButton
            android:id="@+id/refresh_btn"
            android:layout_width="wrap_content"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:layout_height="45dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="13dp"
            android:paddingBottom="10dp"
            android:src="@drawable/refresh_widget"
            android:background="@drawable/card"
            style="?android:attr/buttonStyle"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
           />
    </LinearLayout>




</LinearLayout>